hphp/hack/test/typecheck/immvector_invalid_key.php.exp
ERROR: File "immvector_invalid_key.php", line 15, characters 8-22:
Typing error (Typing[4110])
  File "immvector_invalid_key.php", line 15, characters 8-10:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "immvector_invalid_key.php", line 15, characters 12-21:
  But got `string`
